--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-<h1>HELLO</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Reddit IDE Skin</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Consolas, monospace;
+      background-color: #1e1e1e;
+      color: #d4d4d4;
+      display: flex;
+      height: 100vh;
+    }
+    .sidebar {
+      width: 250px;
+      background-color: #252526;
+      overflow-y: auto;
+      padding: 10px;
+      border-right: 1px solid #444;
+    }
+    .folder {
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+    .folder > .title {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+    .file {
+      margin-left: 15px;
+      margin-bottom: 4px;
+      cursor: pointer;
+      font-size: 13px;
+      color: #ccc;
+    }
+    .file:hover {
+      color: #fff;
+    }
+    .tab-bar {
+      background-color: #2d2d2d;
+      display: flex;
+      padding: 5px;
+      border-bottom: 1px solid #444;
+    }
+    .tab {
+      padding: 6px 10px;
+      background-color: #1e1e1e;
+      border: 1px solid #3c3c3c;
+      margin-right: 5px;
+      color: #ccc;
+      cursor: pointer;
+    }
+    .tab.active {
+      background-color: #252526;
+      border-bottom: none;
+    }
+    .editor {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+    .content {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      background-color: #1e1e1e;
+    }
+    .function {
+      margin-bottom: 10px;
+      padding: 10px;
+      background-color: #1e1e1e;
+      border: 1px solid #3c3c3c;
+      border-radius: 4px;
+      white-space: pre-wrap;
+    }
+    .status-bar {
+      height: 24px;
+      background-color: #007acc;
+      color: white;
+      display: flex;
+      align-items: center;
+      padding-left: 10px;
+      font-size: 12px;
+    }
+  </style>
+</head>
+<body>
+  <div class="sidebar" id="sidebar"></div>
+  <div class="editor">
+    <div class="tab-bar" id="tabBar"></div>
+    <div class="content" id="content">Seleziona un thread per visualizzare i commenti.</div>
+    <div class="status-bar">
+      🔵 Connected | UTF-8 | LF | HTML
+    </div>
+  </div>
+
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const tabBar = document.getElementById('tabBar');
+    const content = document.getElementById('content');
+
+    let openTabs = {};
+
+    function fetchSubreddit(subreddit) {
+      fetch(`https://www.reddit.com/r/${subreddit}.json`)
+        .then(res => res.json())
+        .then(data => {
+          const threads = data.data.children;
+          const folder = document.createElement('div');
+          folder.className = 'folder';
+
+          const folderTitle = document.createElement('div');
+          folderTitle.className = 'title';
+          folderTitle.textContent = `/r/${subreddit}`;
+          folder.appendChild(folderTitle);
+
+          threads.forEach(t => {
+            const file = document.createElement('div');
+            file.className = 'file';
+            file.textContent = '📄 ' + t.data.title.slice(0, 50);
+            file.onclick = () => openThreadTab(t.data);
+            folder.appendChild(file);
+          });
+
+          sidebar.appendChild(folder);
+        });
+    }
+
+    function openThreadTab(thread) {
+      if (openTabs[thread.id]) {
+        setActiveTab(thread.id);
+        return;
+      }
+
+      const tab = document.createElement('div');
+      tab.className = 'tab';
+      tab.textContent = thread.title.slice(0, 20);
+      tab.onclick = () => setActiveTab(thread.id);
+      tabBar.appendChild(tab);
+
+      openTabs[thread.id] = { tab, thread };
+      setActiveTab(thread.id);
+    }
+
+    function setActiveTab(threadId) {
+      for (let id in openTabs) {
+        openTabs[id].tab.classList.remove('active');
+      }
+      openTabs[threadId].tab.classList.add('active');
+      renderThread(openTabs[threadId].thread);
+    }
+
+    function renderThread(thread) {
+      fetch(`https://www.reddit.com${thread.permalink}.json`)
+        .then(res => res.json())
+        .then(data => {
+          const comments = data[1].data.children;
+          content.innerHTML = '';
+          comments.forEach(c => {
+            if (!c.data.body) return;
+            const fn = document.createElement('div');
+            fn.className = 'function';
+            fn.textContent = `function comment_by_${c.data.author.replace(/\W/g, '_')}() {\n  // ${c.data.body.replace(/\n/g, '\n  // ')}\n}`;
+            content.appendChild(fn);
+          });
+        });
+    }
+
+    // Inizializzazione
+    fetchSubreddit('javascript');
+    fetchSubreddit('webdev');
+  </script>
+</body>
+</html>
