--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
       padding-left: 10px;
       font-size: 12px;
     }
+    .topbar {
+	background-image:url('2.PNG');
+	position:fixed;
+	top:0px;
+	left:0px;
+	z-index:1;
+	height:20px;
+	width:3000px;
+    }
   </style>
 </head>
 <body>
