--- a/index.html
+++ b/index.html
@@ -84,17 +84,18 @@
       font-size: 12px;
     }
     .topbar {
-	background-image:url('2.PNG');
-	position:fixed;
-	top:0px;
-	left:0px;
-	z-index:1;
-	height:20px;
-	width:3000px;
+      background-image:url('2.PNG');
+      position:fixed;
+      top:0px;
+      left:0px;
+      z-index:1;
+      height:20px;
+      width:3000px;
     }
   </style>
 </head>
 <body>
+  <div class="topbar"></div>
   <div class="sidebar" id="sidebar"></div>
   <div class="editor">
     <div class="tab-bar" id="tabBar"></div>
