--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <meta charset="UTF-8" />
   <title>VSCodeit</title>
   <style>
+
     body {
-      margin: 0;
+
       font-family: Consolas, monospace;
-      background-color: #1e1e1e;
       color: #d4d4d4;
-      display: flex;
-      height: 100vh;
+      background-color: #1e1e1e;
+      padding:0px;
+      margin:0px;
+      z-index:1;
+      min-width:600px;
+      min-height:800px;
+      overflow:hidden;
     }
+    
     .sidebar {
       width: 250px;
       background-color: #252526;
@@ -89,23 +95,107 @@
       top:0px;
       left:0px;
       z-index:1;
-      height:20px;
+      height:43px;
       width:3000px;
+    }
+    .topbar {
+      background-image:url('2.PNG');
+      position:fixed;
+      top:0px;
+      left:0px;
+      z-index:1;
+      height:42px;
+      width:3000px;
+    }
+    .mainrow {
+      height:3000px;
+    }
+    .leftcol {
+      position: fixed;
+      background-image:url('left.png');
+      top: 41px;
+      left: 0;
+      width: 58px;
+      height: calc(100vh - 42px);
+      z-index: 1;
+      overflow: hidden; /* evita scroll se l'immagine dovesse sforare */
+      background-repeat: no-repeat;
+    }
+    .middle{
+      padding-left: 55px;
+      padding-top: 39px;
+      width:319px;
+      min-width:234px;
+      position:relative;
+      left:-2px;
+      vertical-align:top;
+      background-color: #252526;
+      overflow-y: auto;
+      border-right: 1px solid #0f0202;
+    }
+
+    .middleupper {
+      background-image:url('middlebar.png');
+      width:321px;
+      height:71px;
+      position:fixed;
+    }
+    .bottombar {
+      background-image:url('lowbar.png');
+      width:3000px;
+      height:66px;
+      z-index:2;
+      bottom:0px;
+      left:0px;
+      position:fixed;
     }
   </style>
 </head>
 <body>
   <div class="topbar"></div>
-  <div class="sidebar" id="sidebar"></div>
-  <div class="editor">
-    <div class="tab-bar" id="tabBar"></div>
-    <div class="content" id="content">Seleziona un thread per visualizzare i commenti.</div>
-    <div class="status-bar">
-      🔵 Connected | UTF-8 | LF | HTML
-    </div>
-  </div>
+  <!-- <div class="sidebar" id="sidebar"></div> -->
+  <table>
+    <tr class="mainrow">
+      <td class="leftcol">
+      </td>
+      <td class="middle">
+        <div class="middleupper">
+        </div>
+        <div class="folderholder">
 
-  </script>
+        </div>
+
+      </td>
+      <td class="right">
+        <div class="theemailbody">
+
+        <div style="padding:30px;">
+
+        Welcome to MSOutlookit 2013! <br /><br />
+        The wonderful @attaxia volunteered to update this UI to the
+        Outlook 2013 version (code <a href="https://github.com/attaxia/MSOutlookit">here</a>).
+
+        This newer version is still a work in progress, but the old version is still available <a href="2004/index.html">here</a>.
+
+  </br></br>
+
+
+
+        <p>
+          <i> Want to add subreddits? Click the "New Email" button and follow the instructions!</i>
+        </p>
+
+        </br></br>
+              </div>
+
+
+        </div>
+      </td>
+    </tr>
+  </table>
+
+  <div class="bottombar"></div>
+  <!-- </script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" type="text/javascript"></script>
 	<script src="ui/jquery.ui.core.min.js"></script> 
 	<script src="ui/jquery.ui.widget.min.js"></script> 
@@ -113,6 +203,6 @@
 	<script src="ui/jquery.ui.draggable.min.js"></script> 
 	<script src="ui/jquery.ui.resizable.min.js"></script> 
   <script type="text/javascript" src="thejs.js">
-  </script>
+  </script> -->
 </body>
 </html>
