--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       font-size: 12px;
     }
     .topbar {
-      background-image:url('2.PNG');
+      background-image:url('topbar.PNG');
       position:fixed;
       top:0px;
       left:0px;
