--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
       top:15px;
       left:25px;
       margin-left:5px;
-      font-size:small;
       padding:2px;
     }
-
+    .right {
+      padding: 50px 0px 0px 0px !important;
+      width:100% !important;
+      position:relative;
+      left:7px;
+      vertical-align:top;
+      flex: 1;              /* prende tutto lo spazio rimanente */
+      color: #9cdcf0;
+    }
     td.right:hover * .authorandstuff {
       display:block;
     }
@@ -76,6 +83,16 @@
       font-weight: bold;
       margin-bottom: 5px;
     }
+    .commentauthor {
+      color:#d1d1a2;
+    }
+    .commentsymbol {
+      color:#ffd705;
+    }
+    .functionauthor {
+      color:#569cd6;
+    }
+    
     .file {
       margin-left: 15px;
       margin-bottom: 4px;
@@ -143,6 +160,7 @@
     }
     .mainrow {
       height:3000px;
+      display: flex;
     }
     .leftcol {
       position: fixed;
@@ -152,6 +170,7 @@
       width: 58px;
       height: calc(100vh - 42px);
       z-index: 1;
+      flex-shrink: 0;
       overflow: hidden; /* evita scroll se l'immagine dovesse sforare */
       background-repeat: no-repeat;
     }
@@ -164,6 +183,7 @@
       position:relative;
       left:-2px;
       vertical-align:top;
+      flex-shrink: 0;
       background-color: #181818;
       overflow-y: auto;
       border-right: 1px solid #181818;
@@ -222,8 +242,11 @@
     .emailpreview {
       flex: 1;           /* prende tutto lo spazio restante */
       white-space: nowrap;   /* non andare mai a capo */
-      overflow: hidden;
+      overflow: visible;
       text-overflow: ellipsis;
+      padding-left: 10px;
+      width:20px;
+      position:relative;
     }
     .emailname {
       font-family: "Segoe UI","Helvetica Neu",Times,serif;
@@ -235,11 +258,44 @@
       color:#888;
       font-size:8pt;
     }
-    .emailpreview {
-      padding-left: 10px;
-      width:290px;
+    .theemailbody {
+      overflow: visible;
+      overflow-x:hidden;
+      width:99.8%;
+    }
+    .commentroot {
       position:relative;
-      overflow:hidden;
+    }
+    .backgradient {
+      height: calc(100vh - 139px); /* prima era in JS */
+    }
+
+    .mainrow {
+      height: calc(100vh - 166px);
+    }
+
+    #previewarea {
+      height: calc(100vh - 216px);
+      overflow-y: auto;
+    }
+
+    .theemailbody {
+      height: calc(100vh - 146px);
+      overflow-y: auto;
+    }
+    .commentbody {
+      margin-left:50px;
+      margin-right:15px;
+    }
+    .folderholder {
+      overflow-y: auto;             /* scroll se serve */
+    }
+    td.right:hover * .commentroothi {
+      background:#CAE6E6;
+      border:solid 1px blue;
+    }
+    * {
+      scrollbar-color: #5a5a5a #1e1e1e;    /* thumb + track */
     }
   </style>
 </head>
