--- a/index.html
+++ b/index.html
@@ -285,7 +285,6 @@
     }
     .commentbody {
       margin-top:16px;
-      margin-bottom:16px;
       margin-left:50px;
       margin-right:15px;
     }
@@ -341,6 +340,25 @@
       color: #4FC3F7;
       text-decoration: none;
     }
+    p {
+      
+    }
+    .ui-resizable-se {
+      height:20px;
+      width:20px;
+      cursor:se-resize;
+      position:absolute;
+      bottom:0px;
+      right:0px;
+    }
+    div.theemailbody * .ui-resizable-e {
+      width:100%;
+      height:100%;
+      position:relative;
+      bottom:0px;
+      left:0px;
+      cursor:e-resize;
+    }
   </style>
 </head>
 <body>
@@ -381,6 +399,9 @@
   </div>
   <div class="bottombar"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<script src="ui/jquery.ui.core.min.js"></script> 
 	<script src="ui/jquery.ui.widget.min.js"></script> 
 	<script src="ui/jquery.ui.mouse.min.js"></script> 
