--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
 
     /* blocchi commento */
     /*.commentroot,*/
-    .commentchild {
+    /* .commentchild {
       margin-bottom: 10px;
-    }
+    } */
     .score {
       color: #b5cea8;
     }
