--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       vertical-align:top;
       flex: 1;              /* prende tutto lo spazio rimanente */
       color: #9cdcf0;
+      cursor:text;
+      font-size: 12.5pt;
     }
     td.right:hover * .authorandstuff {
       display:block;
@@ -382,6 +384,13 @@
       background-color: #007acc;  /* blu VSCode */
       border-color: #007acc;
       color: white;
+    }
+    ::-moz-selection {
+      background: #264f78;
+    }
+
+    ::selection {
+      background: #264f78;
     }
   </style>
 </head>
