--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
   <div class="bottombar"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
+<!--  <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script> -->
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<script src="ui/jquery.ui.core.min.js"></script> 
 	<script src="ui/jquery.ui.widget.min.js"></script> 
